# distributed_suffix_sorting

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  parse_output.py
.github/workflows/: cmake-build.yml
examples/: dcx_lib_example_usage.cpp  simple.cpp
src/: CMakeLists.txt  cli.cpp  dcx_common.hpp  difference_cover.hpp  helpers_for_examples.hpp  io.hpp  main.cpp  memory_monitor.hpp  mpi_util.hpp  options.hpp  pdc3.hpp  pdcx.hpp  printing.hpp  sa_check.hpp  sort.hpp  test.hpp  uint_types.hpp  util.hpp
src/dcx/: dcx.cpp  dcx.hpp  dcx_instantiations.hpp  pdcx_u40_unpacked.cpp  pdcx_u8_3bit.cpp  pdcx_u8_5bit.cpp  pdcx_u8_8bit.cpp  pdcx_u8_unpacked.cpp
src/executables/: cli.cpp  main.cpp
src/mpi/: CMakeLists.txt  alltoall.hpp  distribute.hpp  io.hpp  p2p.hpp  reduce.hpp  shift.hpp  stats.hpp  zip.hpp
src/pdcx/: CMakeLists.txt  chunking.hpp  compute_ranks.hpp  config.hpp  difference_cover.hpp  merge_samples.hpp  pdc3.hpp  pdcx.hpp  sample_string.hpp  sequential_sa.hpp  space_efficient_sort.hpp  statistics.hpp
src/sorters/: CMakeLists.txt  prefix_doubling.hpp  sample_sort.hpp  sample_sort_common.hpp  sample_sort_config.hpp  sample_sort_strings.hpp  seq_string_sorter_wrapper.hpp  sorting_wrapper.hpp
src/strings/: CMakeLists.txt  char_container.hpp  string_set.hpp
src/util/: CMakeLists.txt  memory.hpp  printing.hpp  random.hpp  string_util.hpp  uint_types.hpp
tests/: CMakeLists.txt  distribute_test.cpp  sa_check_test.cpp  sorting_test.cpp  suffix_array_test.cpp
